# esp32-modbus-tcp2rtu

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.json  esp-idf_modbus_float_fix.diff  partitions.csv  sdkconfig  sdkconfig.ci  sdkconfig.defaults  sdkconfig.old
components/a4988/: CMakeLists.txt  iot_stepper_a4988.cpp
components/a4988/include/: iot_stepper_a4988.h
front/: config.json  package-lock.json  package.json  webpack.config.js
front/src/: index.html  index.js
front/src/js/components/: App.jsx
front/src/js/components/container/: FormContainer.jsx  Header.jsx  NavLink.jsx
front/src/js/components/pages/: DevInfo.jsx  Gpio.jsx  Home.jsx  Io.jsx  Main.jsx  Modbus.jsx  Mqtt.jsx  OtaUpdate.jsx
main/: CMakeLists.txt  Kconfig.projbuild  iot_module_main.c  iot_module_main.cpp  main.c  main.h  time_utils.c  time_utils.cpp  time_utils.h
main/certs/: cacert.pem  prvtkey.pem
main/config/: config.c  config.cpp  config.h
main/curtains/: curtains.cpp  curtains.h
main/gpio/: gpio.c  gpio.cpp  gpio.h
main/gpiov2/: gpio_v2.cpp  gpio_v2.h
main/mcp23xgpio/: mcp23xgpio.cpp  mcp23xgpio.h
main/modbus/: modbus.c  modbus.cpp  modbus.h  modbus_const.h
main/mqtt/: mqtt.c  mqtt.cpp  mqtt.h
main/ui/: ota_handler.c  ota_handler.cpp  ota_handler.h  ui_server.c  ui_server.cpp  ui_server.h  ui_server_handler.c  ui_server_handler.cpp  ui_server_handler.h  ui_stepper_handler.cpp  ui_stepper_handler.h
stl/: TCP-RTU-bottom-case v4 v0.f3d  TCP-RTU-bottom-case v4.f3d  bottom.gcode  bottom.stl  top.stl
